[tool.poetry]
name = "tstamp"
version = "1.6"
description = "Timestamps application"
authors = ["Stoned Elipot <stoned.elipot@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
click = "7.0"
Flask = "1.1.1"
itsdangerous = "1.1.0"
jinja2 = "2.10.3"
Markupsafe = "1.1.1"
redis = "3.3.10"
Werkzeug = "0.16.0"

[tool.poetry.dev-dependencies]
podman-compose = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
