[tool.poetry]
name = "tstamp"
version = "1.6"
description = "Timestamps application"
authors = ["Stoned Elipot <stoned.elipot@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
Flask = "^1.1.2"
itsdangerous = "^1.1.0"
jinja2 = "^2.11.3"
Markupsafe = "^1.1.1"
redis = "^3.5.3"
Werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]
podman-compose = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
